--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
   "manifest_version": 2,
   "name": "Luna",
-  "description": "Browse the web hands free",
+  "description": "Make yourself more productive!",
   "version": "0.1",
   "author": "Octobits",
   "permissions": ["tabs", "identity", "webNavigation", "bookmarks", "downloads", "sessions", "contextMenus", "tts"],
-  "options_page": "initialize.html",
+  "options_page": "public/initialize.html",
   "background" : {
-    "scripts": ["jquery-3.1.0.min.js", "background.js"]
+    "scripts": ["libs/jquery-3.1.0.min.js", "background.js"]
   },
   "browser_action": {
-    "default_icon": "mic-slash.png"
+    "default_icon": "images/mic-slash.png"
   },
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "js": ["jquery-3.1.0.min.js", "actions.js", "parse.js"]
+      "js": ["libs/jquery-3.1.0.min.js", "actions.js", "parse.js"]
     }
   ]
 }
