--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,9 @@
   "author": "Octobits",
   "permissions": ["tabs", "identity", "webNavigation", "bookmarks", "downloads", "sessions", "contextMenus", "tts"],
   "options_page": "public/initialize.html",
-  "background" : {
-    "scripts": ["libs/jquery-3.1.0.min.js", "background.js"]
+  "background": {
+    "page": "background.html",
+    "persistent": true
   },
   "browser_action": {
     "default_icon": "images/mic-slash.png"
@@ -17,5 +18,6 @@
       "matches": ["http://*/*", "https://*/*"],
       "js": ["libs/jquery-3.1.0.min.js", "actions.js", "libs/parse.js"]
     }
-  ]
+  ],
+  "content_security_policy": "script-src 'self' https://cdn.firebase.com https://*.firebaseio.com; object-src 'self'"
 }
